fixed frontpage fontsize on mobile

--- a/_app/css/modules/frontpage.css
+++ b/_app/css/modules/frontpage.css
@@ -77,6 +77,7 @@
 @media (max-width: 769px) {
 	.frontpage__main-container {
 		flex-direction: column;
+		font-size: 3vh;
 	}
 
 	.main-container__divider {
